--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1621,6 +1621,7 @@ pre code {
   width: 100%;
   margin-bottom: 1rem;
   color: #212529;
+  text-align: center;
 }
 
 .table th,
@@ -1628,6 +1629,8 @@ pre code {
   padding: 0.75rem;
   vertical-align: top;
   border-top: 1px solid #dee2e6;
+  overflow: hidden;
+  max-width: 50px;
 }
 
 .table thead th {
