--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -44,6 +44,6 @@
     border-radius: 0;
     border: none;
     resize: unset;
-    background-color: #f9f9f9 !important;
+    background-color: #FFE53E !important;
     box-shadow: none !important;
 }
