GH-67 Alteração da cor do menu

--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -52,7 +52,7 @@ textarea{
     height: 150px;
 }
 .bg-header {
-    background: #F2B705
+    background: #7CC687
 }
 .nav-header-pills .nav-item {
     background: hsla(0, 0%, 0%, 0.1);
