--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -52,17 +52,15 @@ textarea{
     height: 150px;
 }
 .bg-header {
-    background: #7CC687
+    background: #e6b800;
 }
 .nav-header-pills .nav-item {
-    background: hsla(0, 0%, 0%, 0.1);
+    background: #4d4d4d;
+    font-weight: bold;
     margin: .5em;
     border-radius: 15px;
 }
 .links{
     float:right;
     padding: 10px;
-}
-.links a {
-    padding-right:10px;
 }
