--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -117,6 +117,7 @@ td {
     opacity: 0.8;
 }
 .alert-warning{
-    color: #84700e;
-    background: #ffff99;
+    color: black;
+    background: #f8d45f;
+    opacity: 0.5;
 }
