--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -115,6 +115,7 @@ td {
     border-radius: 10%;
     border-radius: .25rem;
     opacity: 0.8;
+    color: white;
 }
 .alert-warning{
     color: black;
