--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -104,7 +104,7 @@ td {
     border-radius: 10%;
     width: 70px;
 }
-.btn-orange1{
+/*.btn-orange1{
     background-color: #ED9C2E;
     border-radius: 10%;
     border-radius: .25rem;
@@ -116,7 +116,7 @@ td {
     border-radius: .25rem;
     opacity: 0.8;
     color: white;
-}
+}*/
 .alert-warning{
     color: black;
     background: #f8d45f;
