--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -128,3 +128,15 @@ td {
     background-color:#f8fafc;
     width:250px;
 }
+.img-width-1{
+    width: 300px;
+    height: 300px;
+}
+.img-width-2{
+    width: 700px;
+    height: 300px;
+}
+.img-width-3{
+    width: 300px;
+    height: 300px;
+}
