GH-60 Alterações nos botões de gerar prova

--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -156,3 +156,10 @@ td {
 .card-body{
     color: #a4a4a4;
 }
+.btn-orange2{
+    background-color: #ED9C2E;
+    width: 54%;
+}
+.red2{
+    background-color: #ff1a1a;    
+}
