Alterações nos botões de gerar prova GH-60

--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -157,9 +157,9 @@ td {
     color: #a4a4a4;
 }
 .btn-orange2{
-    background-color: #ED9C2E;
+    background-color: #f7d5a6;
     width: 54%;
 }
 .red2{
-    background-color: #ff1a1a;    
+    background-color: #fcb8b8;    
 }
